[1.0.3]
- Added ISteamUserStats::FindOrCreateLeaderboard(), GetLeaderboardSortMethod(), GetLeaderboardDisplayType().

[1.0.2]
- Added wrapper to ISteamFriends::RequestUserInformation().
- Added PersonaStateChange callback.

[1.0.1]
- Updated to Steamworks SDK v1.32.
- Added ISteamApps wrapper to expose BIsSubscribedApp() function.
- Native Windows library is now built using premake5 and Visual Studio 2013.

[1.0.0]
- First version released on Maven Central.